# Micro_banch

./: .gitignore  CMakeLists.txt  DQB_PM_mentor_report.md  README.md  regression_output.txt  微秒级主动迁移调度仿真实验计划.md  微秒级主动迁移调度仿真指导 (2).md  新实验思想指导.md
.github/instructions/: benchmark-report.instructions.md  cpp-simulation.instructions.md  win11-host.instructions.md
Flowstep/: CODE_STRUCTURE_GUIDE.md  Flowstep.md
artifacts/step-00-readiness/: checklist.md  config_used.md  next_prompt.md  readiness_report.md  run_log.md  structure_diff.md  summary.md  toolchain_status.md
artifacts/step-01-tier1/: README.md  iteration_summary.md  metrics_table.csv  next_prompt.md  run_log.md  summary.md
artifacts/step-02-tier2/: README.md  fairness_audit.md  metrics_scan.csv  next_prompt.md  run_log.md  summary.md
artifacts/step-03-tier3/: README.md  boundary_case.md  metrics_table.csv  next_prompt.md  run_log.md  summary.md
artifacts/step-04-freeze/: README.md  final_results_manifest.json  next_prompt.md  repro_commands.md  run_log.md  summary.md
artifacts/step-04b-sensitivity/: run_log.md  sensitivity_scan.csv  summary.md
artifacts/step-04c-heterogeneous/: metrics_table.csv  run_log.md  summary.md
artifacts/step-05-cloudlab/: README.md
artifacts/step-06-aqb/: aqb_batch_sweep.csv  aqb_eval.csv  aqb_heterogeneous.partial-timeout.csv  summary.md
artifacts/step-07-dqb/: metrics_summary.csv  summary.md
artifacts/step-08-dqb-batch/: dqb_eval.csv  dqb_w1_only.csv  dqb_w2_only.csv  dqb_w3_only.csv  metrics_summary.csv  summary.md
artifacts/step-09-dqb-v2-plan/: README.md  ablations.csv  acceptance_criteria.md  experiment_matrix.csv  figure_plan.csv  metrics_schema.csv
artifacts/step-10-dqb-closed-loop/: summary.md
artifacts/step-11-dqb-diagnostics/: summary.md
artifacts/step-12-intra-host/: intra_w3_only.csv  summary.md
artifacts/step-13-intra-host-sweep/: intra_w1_high_load.csv  intra_w1_sanity.csv  intra_w3_rho_050.csv  intra_w3_rho_070.csv  intra_w3_rho_092.csv  median_summary.csv  summary.md
artifacts/step-14-intra-check-period/: intra_w1_rho_095_check_1us.csv  intra_w1_rho_095_check_2us.csv  intra_w1_rho_095_check_5us.csv  intra_w3_rho_092_check_1us.csv  intra_w3_rho_092_check_2us.csv  intra_w3_rho_092_check_5us.csv  median_summary.csv  summary.md
artifacts/step-15-rescuesched/: rescue_ablation.csv  rescue_check_sweep.csv  rescue_main.csv  rescue_overload_sanity.csv  rescue_w3_only.csv  summary.md
artifacts/step-16-rescuesched-readiness/: median_summary.csv  readiness_report.md
artifacts/step-17-rescuesched-closure/: ci_summary.csv  closure_median_summary.csv  migration_cost_microbench.csv  rescue_calibration.csv  rescue_robustness_10seed.csv  rescue_w2_burst.csv  summary.md
artifacts/step-18-infocom-readiness/: infocom_ci_summary.csv  infocom_median_summary.csv  migration_cost_microbench.csv  rescue_cost_calibration.csv  rescue_estimator_main.csv  rescue_estimator_w2.csv  rescue_hybrid_main.csv  rescue_target_safety_stress.csv  rescue_w2_boundary.csv  summary.md
artifacts/step-20-corrected-pilot/: go_no_go.md  manifest.md  paired_comparisons.csv  summary.csv  w1.csv  w2.csv  w3.csv
artifacts/step-20b-corrected-holdout-pilot/: go_no_go.md  manifest.md  paired_comparisons.csv  summary.csv  w1.csv  w2.csv  w3.csv
artifacts/step-21-corrected-full/: go_no_go.md  manifest.md  paired_comparisons.csv  summary.csv  w1.csv  w2.csv  w3.csv
artifacts/step-22-local-simulation-diagnostics/full-ewma-confirmation-20260715/: RUN_METADATA.txt  RUN_STATUS.txt  checksums.sha256  manifest.md  paired_comparisons.csv  profiles.csv  sensitivity_vs_default.csv  summary.csv
artifacts/step-22-local-simulation-diagnostics/pilot-20260715/: RUN_METADATA.txt  RUN_STATUS.txt  checksums.sha256  manifest.md  paired_comparisons.csv  profiles.csv  sensitivity_vs_default.csv  (+1 more)
config/: default.yaml  rescuesched.yaml
docs/: 01-project-overview.md  02-simulation-analysis.md  03-physical-mapping.md  04-experiment-design.md  05-implementation-plan.md  06-test-record.md  07-result-analysis.md  08-paper-writing-notes.md  ARCHITECTURE.md  ARTIFACT_PROVENANCE.md  CLOUDLAB_PREREGISTRATION.md  CLOUDLAB_QUICKSTART.md  CLOUDLAB_RUNBOOK.md  DQB_BATCH_AWARE_HISTORY.md  DQB_CURRENT_RESULTS_ANALYSIS.md  DQB_V2_EXPERIMENT_METHOD.md  INFOCOM_2027_SUBMISSION_GUIDE.md  INFOCOM_READINESS.md  LOCAL_SIMULATION_DIAGNOSTICS.md  MODULE_SPEC.md  NEXT_PHASE_AFTER_CORRECTED_EVAL.md  PAPER_CONTRACT_INFOCOM2027.md  PHYSICAL_MACHINE_RUNBOOK.md  PHYSICAL_RUNTIME_CONTRACT.md  RESCUESCHED_EVALUATION_CONTRACT_V2.md  RESCUESCHED_PHYSICAL_REPRODUCTION_PLAN.md  ai-log.md  reflection.md
include/physical/: rpc_protocol.h  runtime.h  trace.h
paper/: .gitignore  .latexmkrc  CLAIM_EVIDENCE_MATRIX.md  README.md  WRITING_PLAN.md  main.tex  refs.bib
paper/sections/: 01-introduction.tex  02-background.tex  03-model.tex  04-design.tex  05-evaluation.tex  06-related.tex  07-conclusion.tex
scripts/: analyze_simulator_physical_alignment.py  capture_physical_host_state.sh  corrected_eval_analysis.py  corrected_eval_plots.py  emit_dqb_v2_experiment_plan.py  generate_charts.py  generate_cloudlab_run_order.py  infocom_readiness_analysis.py  local_simulation_diagnostics.py  rescue_analysis.py  run_background_job.sh  run_corrected_eval.ps1  run_corrected_eval.sh  run_local_physical_runtime_smoke.sh  run_local_rpc_smoke.sh  run_local_simulation_diagnostics.sh  run_physical_preflight.sh  run_pinned_handoff_microbench.sh  run_sanitizers.sh  run_step00.ps1  run_step01.ps1  run_three_node_rpc_smoke.sh  run_two_node_rpc_smoke.sh  validate_rpc_three_node_run.py  validate_rpc_two_node_run.py
scripts/__pycache__/: emit_dqb_v2_experiment_plan.cpython-311.pyc.2192604859056
src/app/: handoff_microbench_main.cpp  main.cpp  physical_runtime_main.cpp  rpc_client_main.cpp  rpc_server_main.cpp  trace_generator_main.cpp
src/core/: simulator.cpp  workload_trace.cpp
src/physical/: runtime.cpp  trace.cpp
tests/integration/: validate_rescue_csv_schema.py
tests/unit/: physical_runtime_tests.cpp  rpc_protocol_tests.cpp  simulator_validity_tests.cpp
(+111 files in other folders)
